[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "um-agent"
version     = "0.1.0"
description = "Autonomous Utilization Management & Policy Digitization Agentic Network"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
